✨ Add `/book/:bookId` API to retrieve book by id
